elevate tabbox when elevating highlighted windows

BUG: 299324
FIXED-IN: 4.9
REVIEW: 104845