tabbox/tabbox.h
@@ -54,7 +54,7 @@ public:
     virtual int nextDesktopFocusChain(int desktop) const;
     virtual int numberOfDesktops() const;
     virtual TabBoxClientList stackingOrder() const;
-    virtual void elevateClient(TabBoxClient* c, bool elevate) const;
+    virtual void elevateClient(TabBoxClient* c, WId tabbox, bool elevate) const;
     virtual void raiseClient(TabBoxClient *client) const;
     virtual void restack(TabBoxClient *c, TabBoxClient *under);
     virtual TabBoxClient* clientToAddToList(TabBoxClient* client, int desktop) const;
